--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: sql_macoratti
+name: teste_persistencia
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
