--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   sqflite:
   path_provider:
+  cached_network_image:
   image_picker: 
 
 dev_dependencies:
